--- a/cssEngine.css
+++ b/cssEngine.css
@@ -119,7 +119,7 @@ main table
 {
     background-color:black;
 }
-#runButton, #stopButton, #resetButton
+#runButton, #stopButton, #resetButton, #resumeButton
 {
     color:black !important;
     background-color:rgb(200, 200, 200);
@@ -168,6 +168,22 @@ main table
     to 
     {
         background-color:black;
+        border-radius: 0% 0%;
+        transform:  scale(1);
+    }
+}
+@keyframes anYellow
+{
+    from
+    {
+        background-color: cyan;
+        border-radius: 50% 50%;
+        transform:  scale(0.2);
+    }
+
+    to 
+    {
+        background-color: yellow;
         border-radius: 0% 0%;
         transform:  scale(1);
     }
